chore: fix image grid on tablet

--- a/src/components/SwatchPaletteWidget/_swatch-palette-widget.scss
+++ b/src/components/SwatchPaletteWidget/_swatch-palette-widget.scss
@@ -88,6 +88,6 @@
   }
 }
 
-.#{$prefix}--swatch-palettes .#{$prefix}--content-switcher-btn {
+.#{$prefix}--swatch-palettes-container .#{$prefix}--content-switcher-btn {
   border-radius: 0;
 }
